search dropdown icon fixed. fixes #618. Fancybox close button no longer cut off. fixes #619

--- a/web/css/zeega.fancybox.css
+++ b/web/css/zeega.fancybox.css
@@ -262,9 +262,8 @@
 }
 .fancybox-close-button {
 	position: absolute;
-	top: -10px;
 	right: 0px;
-	font-size: 2em;
+	font-size: 2.5em;
 	font-weight: bold;
 	font-family: Arial,sans-serif;
 	text-shadow: 1px 1px 1px #666;
